# uikit-agent

./: .cursorrules  .env-template  .gitignore  .npmrc  Dockerfile  Justfile  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  format.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-dev-api.sh  run-dev-worker.sh  run-dev.sh  tasks.py  temp.md
.cursor/rules/: general.mdc
agents/: code_generator_agent.py
agents/code_generator/: __init__.py  agent.py  mcp_client.py  mcp_local_context.py  nodes.py  prompts.py  state.py
agents/code_generator/nodes/: __init__.py  base_codegen_nodes.py  input_validation.py  mcp_context_retrieval.py  mobile_generator.py  mobile_nodes.py  web_generator.py  web_nodes.py
app/api/: router.py
app/api/v1/: generate_code.py  healthcheck.py  task_history.py  task_status_by_id.py  user_tasks.py
app/core/: database.py  dependencies.py  lifespan.py  sentry_config.py  settings.py
app/services/: repository_workspace.py  status_reporter.py
app/utils/: code.py
docs/: langgraph-best-practices.md  local-environment-troubleshooting.md  prepare-prod-hosting.md  redis-guide.md  verify-instructions.md
mocks/: figma-data-card-large.json
models/: __init__.py  request_models.py
schemas/ai-models/: test_ai_response.py
schemas/api/: code_generation_types.py
src/: logger_config.py
tasks/: __init__.py  code_generation.py  code_generation_task.py  test_task.py  testing.py
utils/: redis_debug.py  redis_quick_commands.sh
