[project]
name = "uikit-agent"
version = "0.1.0"
description = "UIKit Agent - AI-powered code generation agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "huey[redis]",
    "redis",
    "python-dotenv",
    # LangChain ecosystem
    "langchain==1.0.8",
    "langchain-core==1.0.7",
    "langchain-openai==1.0.3",
    "langchain-anthropic>=1.1.0",
    # LangGraph
    "langgraph==1.0.3",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.4",
    "langgraph-sdk==0.2.9",
    # LangSmith
    "langsmith==0.4.43",
    # Code formatting
    "black>=24.0.0",
    "isort>=5.13.0",
    "uvloop>=0.22.1",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["agents", "models", "tasks"]
