[project]
name = "uikit-agent"
version = "0.1.0"
description = "UIKit Agent - AI-powered code generation agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "huey[redis]",
    "redis",
    "python-dotenv",
    # LangChain ecosystem
    "langchain==1.0.8",
    "langchain-core==1.0.7",
    "langchain-openai==1.0.3",
    "langchain-anthropic>=1.1.0",
    "langchain-google-genai>=3.1.0",

    # LangGraph
    "langgraph==1.0.3",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.4",
    "langgraph-sdk==0.2.9",

    # LangSmith
    "langsmith==0.4.43",
    # Code formatting
    "uvloop>=0.22.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
]


[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Вмикаємо сортування імпортів (I), стиль коду (E, F) та оновлення до нового синтаксису(UP)
select = ["E", "F", "I", "UP"]

# Налаштування сортування імпортів
[tool.ruff.lint.isort]
known-first-party = ["agents", "tasks", "schemas" ]